--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,14 @@
 body{
   text-align: center;
 }
+form{
+  text-align: center;
+}
+
+#addItem{
+  text-align: right;
+}
+
 #logOut{
   text-align: right;
 }
